--- a/package.json
+++ b/package.json
@@ -8,26 +8,46 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "lerna": "lerna publish"
+    "lerna": "lerna publish",
+    "build:prod": "cross-env NODE_ENV=production rollup -c",
+    "build:dev": "cross-env NODE_ENV=development rollup -c",
+    "clean": "lerna clean",
+    "plop": "plop"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.14.6",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
     "@storybook/addon-actions": "^6.3.2",
     "@storybook/addon-essentials": "^6.3.2",
     "@storybook/addon-links": "^6.3.2",
     "@storybook/vue": "^6.3.2",
+    "@vue/test-utils": "^1.2.1",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^27.0.6",
     "babel-loader": "^8.2.2",
+    "cross-env": "^7.0.3",
+    "jest": "^27.0.6",
     "lerna": "^4.0.0",
+    "plop": "^2.7.4",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.52.7",
+    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-vue": "5.1.9",
+    "vue-jest": "^3.0.7",
     "vue-loader": "15.9.3",
     "vue-template-compiler": "^2.6.14"
   },
   "dependencies": {
+    "autoprefixer": "8.0.0",
+    "flag": "^4.4.0",
     "vue": "^2.6.14"
   }
 }
