--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "mj-button-002",
+  "name": "mj-button",
   "version": "0.0.5",
   "description": "",
-  "main": "index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/es/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rollup -c",
+    "del": "rimraf dist"
   },
   "keywords": [],
   "author": "",
