--- a/packages/formitem/package.json
+++ b/packages/formitem/package.json
@@ -2,9 +2,11 @@
   "name": "mj-formitem",
   "version": "0.0.5",
   "description": "",
-  "main": "index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/es/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "del": "rimraf dist"
   },
   "keywords": [],
   "author": "",
