--- a/packages/link/package.json
+++ b/packages/link/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mj-link",
+  "name": "mj-link-001",
   "version": "0.0.6",
   "description": "mj-link component",
   "main": "dist/cjs/index.js",
